Resolve deprecation warnings with Bigtable table IDs